Change pointer to crosshair, add overflow to prevent elastic bouncing

--- a/src/scss/base/layout.scss
+++ b/src/scss/base/layout.scss
@@ -1,4 +1,10 @@
 html,
 body {
+  overflow: hidden;
+
   height: 100%;
+}
+
+body {
+  cursor: crosshair;
 }
